added more unit tests